k8s/demo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api
spec:
  selector:
    app: devops-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: devops-api
        image: devopsacrxw8mdy.azurecr.io/devops-api:latest
        ports:
        - containerPort: 3000
