k8s/demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
spec:
  selector:
    app: devops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
      - name: devops-app
        image: devopsacrxw8mdy.azurecr.io/devops-app:latest
        ports:
        - containerPort: 80
